WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103167
Fix unused parameter compile warnings
https://bugs.webkit.org/show_bug.cgi?id=103167
Summary
Fix unused parameter compile warnings
Kangil Han
Reported
2012-11-23 19:40:18 PST
/mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleHyperlink.cpp:284:17: warning: unused parameter ‘link’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:565:15: warning: unused parameter ‘text’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:565:15: warning: unused parameter ‘offset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:565:15: warning: unused parameter ‘boundaryType’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:565:15: warning: unused parameter ‘startOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:565:15: warning: unused parameter ‘endOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:575:15: warning: unused parameter ‘text’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:575:15: warning: unused parameter ‘offset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:575:15: warning: unused parameter ‘boundaryType’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:575:15: warning: unused parameter ‘startOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:575:15: warning: unused parameter ‘endOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:585:15: warning: unused parameter ‘text’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:585:15: warning: unused parameter ‘offset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:585:15: warning: unused parameter ‘boundaryType’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:585:15: warning: unused parameter ‘startOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:585:15: warning: unused parameter ‘endOffset’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:687:13: warning: unused parameter ‘coords’ [-Wunused-parameter]
Attachments
Patch
(3.84 KB, patch)
2012-11-23 19:45 PST
,
Kangil Han
no flags
Details
Formatted Diff
Diff
Patch
(3.93 KB, patch)
2012-11-23 21:37 PST
,
Kangil Han
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-11-23 19:45:05 PST
Created
attachment 175846
[details]
Patch
Gyuyoung Kim
Comment 2
2012-11-23 20:23:09 PST
Comment on
attachment 175846
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175846&action=review
> Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:709 > + UNUSED_PARAM(coords);
In this case, it would be good to remove parameter name.
Kangil Han
Comment 3
2012-11-23 21:37:00 PST
Created
attachment 175849
[details]
Patch
Kangil Han
Comment 4
2012-11-23 21:38:13 PST
(In reply to
comment #2
)
> (From update of
attachment 175846
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=175846&action=review
> > > Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:709 > > + UNUSED_PARAM(coords); > > In this case, it would be good to remove parameter name.
Yes, right. Thanks! Done. :)
WebKit Review Bot
Comment 5
2012-11-23 22:41:13 PST
Comment on
attachment 175849
[details]
Patch Clearing flags on attachment: 175849 Committed
r135643
: <
http://trac.webkit.org/changeset/135643
>
WebKit Review Bot
Comment 6
2012-11-23 22:41:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug