Fix unused parameter compile warnings https://bugs.webkit.org/show_bug.cgi?id=103167

Patch by Kangil Han <kangil.han@samsung.com> on 2012-11-23
Reviewed by Gyuyoung Kim.

Remove compile warning messages by omitting parameter name and using UNUSED_PARAM.

* accessibility/atk/WebKitAccessibleHyperlink.cpp:
(webkitAccessibleHyperlinkIsSelectedLink):
* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextGetTextAfterOffset):
(webkitAccessibleTextGetTextAtOffset):
(webkitAccessibleTextGetTextBeforeOffset):
(webkitAccessibleTextGetOffsetAtPoint):

Canonical link: https://commits.webkit.org/121304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135643 268f45cc-cd09-0410-ab3c-d52691b4dbfc